# PaAM

./: LICENSE  README.md
paam_python/: README.md  pyproject.toml  requirements.txt
paam_python/experiments/: sine_440_660_mono.py  sine_440_660_stereo.py  sine_440_mono.py  sine_440_timbre.py
paam_python/paam_python/: generator.py  graphics.py  player.py  utils.py
