[tool.poetry]
name = "paam-python"
version = "0.1.0"
description = ""
authors = ["maksutovaynur <maksutov_aynur@mail.ru>"]
readme = "README.md"
packages = [{include = "paam_python"}]

[tool.poetry.dependencies]
python = "^3.10"
pyaudio = "^0.2.13"
numpy = "^1.25.1"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
